commit 04 - add listening code for exists() but not if/else not working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-	/* hard code skeleton for ez visualization during design */
+	/* hard code skeleton (hcs) for ez visualization during design */
 
 body {
 	background: url("../images/knitted-netting.png");
@@ -23,6 +23,7 @@ header {
 	background-color: red;
 	text-align: center;
 	margin: 3px;
+	color: white;
 }
 
 #messagePanel {
